feat(runner): properly handle TaskRunner kill (#93)
fix: #93